--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-node-app
-          image: my-docker-repo/my-node-app:latest # Change to your actual image name
+          image: my-docker-repo/my-node-app:latest
           ports:
             - containerPort: 5555
           env:
