--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -27,7 +27,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: my-app-secret
-                  key: DB_USERs
+                  key: DB_USER
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
